--- a/css/styles.css
+++ b/css/styles.css
@@ -32,67 +32,84 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-}
-
 a {
 	color: #de795b;
 	text-decoration: none;
 }
 
-/* Navbar layout
-========================= */
-
-nav {
-  /*min-height: 100px;*/
-  /*float: left;
-  width: 100%;
-  background: grey;*/
-  /*position: fixed;*/
+.container {
+	width: 90%;
+	max-width: 1300px;
+	margin: 0 auto;
 }
 
+/* Page Styles Media Queries
+================================ */
+@media (min-width: 769px) {
+
+	.container {
+		width: 80%;
+	}
+
+}
+
+/* Navbar layout Mobile First
+========================= */
+
 .logo {
-  float:left;
-  /*background: lightgreen;*/
-	padding-top: 20px;
+	text-align: center;
+	background: lightgreen;
+	padding-top: 15px;
+
 }
 
 .nav {
-  float: right;
-	padding-top: 10px;
-}
-.nav li {
-  list-style: none;
-  float: left;
-  /*background: lightgreen;*/
-  padding-left: 15px;
-  font-size: 18px;
-  text-transform: uppercase;
+	text-align: center;
+	background-color: lightgreen;
 }
 
-header {
-  height: 20px;
+.nav li {
+	text-transform: uppercase;
+	font-size: 18px;
+	list-style: none;
+	/*display:inline;*/
+	float: left;
+	padding-right: 15px;
 }
+
+/* Navbar layout Media Queries
+========================= */
+@media (min-width: 769px){
+	.logo {
+	  float:left;
+	}
+
+	.nav {
+	  float: right;
+		padding-top: 10px;
+	}
+
+	.nav li {
+	  padding-left: 15px;
+	}
+}
+
+
+
+/*header {
+  height: 20px;
+}*/
 
 /* Main Content layout
 ========================= */
 
-/*p {
-	font: 18px;
-}*/
 .content-row {
-	padding-top: 90px;
-	padding-bottom: 30px;
+	padding-top: 50px;
+	padding-bottom: 10px;
 }
 
 .primary {
-  /*background: lightblue;*/
-  max-width: 75%;
-	margin-right: 30px;
-
+	max-width: 100%;
 }
 
 .primary h4 {
@@ -101,7 +118,6 @@ header {
 }
 
 .second {
-  /*background: lightseagreen;*/
   width: 250px;
 }
 
@@ -122,6 +138,41 @@ header {
 	margin-bottom: -18px;
 }
 
+/* Main Content Layout Media Queries
+================================= */
+@media (min-width: 769px) {
+	.content-row {
+		padding-top: 90px;
+		padding-bottom: 30px;
+	}
+
+	.col {
+		float: left;
+	}
+
+	.primary {
+		/*background: lightblue;*/
+		max-width: 58%;
+		margin-right: 50px;
+
+	}
+}
+
+@media (min-width: 1025px) {
+	.primary {
+		max-width: 66%;
+
+	}
+}
+
+@media (min-width: 1225px) {
+	.primary {
+		max-width: 69%;
+
+	}
+}
+
+
 /* Images
 ========================= */
 
@@ -131,23 +182,32 @@ img {
   float: left;
 }
 
-/* Column layout
-========================= */
-
-.col {
-  float: left;
-  /*padding-right: 20px;*/
-}
-
-
 
  /* Float Clearfix
 ========================= */
-.group::after {
-  content: "";
-  display: table;
-  clear: both;
+
+	.group::after {
+	  content: "";
+	  display: table;
+	  clear: both;
+	}
+
+@media (min-width: 767px) {
+	nav.group::after {
+		content: "";
+		display: table;
+		clear: both;
+	}
 }
+
+
+
 
 /* Media Queries
 ========================= */
+
+@media (max-width: 1224px) {
+	.container {
+		width: 90%;
+	}
+}
