--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ a {
 	width: 90%;
 	max-width: 1300px;
 	margin: 0 auto;
+	margin-bottom: 40px;
+}
+
+p {
+	font-size: 18px;
 }
 
 /* Page Styles Media Queries
@@ -58,22 +63,30 @@ a {
 
 .logo {
 	text-align: center;
-	background: lightgreen;
-	padding-top: 15px;
+	margin-top: 18px;
 
 }
+
+.logo img {
+	width: 126px;
+	margin: 0 auto;
+	float: none;
+	}
 
 .nav {
 	text-align: center;
-	background-color: lightgreen;
+	padding: 0;
+}
+
+ul {
+	padding: 0;
+	margin: 0;
 }
 
 .nav li {
-	text-transform: uppercase;
 	font-size: 18px;
 	list-style: none;
-	/*display:inline;*/
-	float: left;
+	display:inline;
 	padding-right: 15px;
 }
 
@@ -95,10 +108,6 @@ a {
 }
 
 
-
-/*header {
-  height: 20px;
-}*/
 
 /* Main Content layout
 ========================= */
@@ -130,12 +139,11 @@ a {
 }
 
 .second p {
-	/*display: inline-block;*/
 	font-style: italic;
 	padding: 0;
 	margin: 0;
 	line-height: 30px;
-	margin-bottom: -18px;
+	/*margin-bottom: -18px;*/
 }
 
 /* Main Content Layout Media Queries
@@ -176,11 +184,19 @@ a {
 /* Images
 ========================= */
 
-img {
+.images img {
   width: 33.3%;
   margin: 0;
   float: left;
 }
+
+
+#credit p {
+	margin-top: 5px;
+
+}
+
+
 
 
  /* Float Clearfix
